Updated to SageMathCloud version

--- a/20140318-091214-rs1.3-MarkHendryOlsonCV.tex
+++ b/20140318-091214-rs1.3-MarkHendryOlsonCV.tex
@@ -21,7 +21,7 @@
 
 \documentclass{scrartcl}
 
-%\reversemarginpar % Move the margin to the left of the page 
+%\reversemarginpar % Move the margin to the left of the page
 
 \newcommand{\MarginText}[1]{\marginpar{\raggedleft\itshape\small#1}} % New command defining the margin text style
 
@@ -83,7 +83,7 @@
 
 \NewEntry{email}{\href{mailto:mark@hendryolson.com}{mark@hendryolson.com}} % Email address
 
-\NewEntry{website}{\href{http://hendryolson.com}{http://hendryolson.com}} % Personal website
+\NewEntry{website}{\href{http://v42.org}{http://v42.org}} % Personal website
 
 %\NewEntry{phone}{} % Phone number(s)
 
@@ -103,7 +103,7 @@
 \event[\decimaldate{21}{7}{2005}]{\decimaldate{21}{7}{2006}}{Northern College}
 \event[\decimaldate{21}{7}{2006}]{\decimaldate{20}{7}{2008}}{Engelska Skolan Täby}
 \event[\decimaldate{21}{7}{2008}]{\decimaldate{12}{8}{2014}}{Engelska Gymnasiet}
-\event[\decimaldate{13}{8}{2014}]{\decimaldate{18}{02}{2015}}{\textcolor{Maroon}{Stockholms Stad}}
+\event[\decimaldate{13}{8}{2014}]{\decimaldate{11}{9}{2015}}{\textcolor{Maroon}{Stockholms Stad}}
 \end{chronology}
 \end{center}
 }
@@ -115,18 +115,22 @@
 
 \Description{\textsc{Courses Taught}
 \begin{center}
-\begin{tabular}{l|c}
-\cline{2-2}
- & \textbf{14-15} \\
+\begin{tabular}{l|c|c}
+\cline{2-3}
+ & \textbf{14-15} & \textbf{15-16} \\
 \hline
 
-Math 2c & \doneit \\
+Math 1c & & \doneit \\
 
-Math MYP 3 & \doneit \\
+Math 2c & \doneit & \doneit \\
 
-Math MYP 4 & \doneit \\
+Math MYP 3 & \doneit & \doneit \\
 
-Math IB SL & \doneit \\
+Math MYP 4 & \doneit & \doneit \\
+
+Math IB SL & \doneit & \doneit \\
+
+Math IB HL & & \doneit
 
 \end{tabular}
 \end{center}}
@@ -147,9 +151,9 @@ Math IB SL & \doneit \\
 \NewEntry{2008-2014}{Upper-Secondary Teacher of Mathematics}
 
 \Description{\MarginText{}\itemit mentoring students in years one, two and three \newline
-\itemit attended the IB Mathematics using TI-Nspire cat. III workshop (fall 2013) \newline 
-\itemit attended the IB Mathematics SL cat. I workshop (fall 2011) \newline 
-\itemit Guldäpplet nominee (2010) \newline  
+\itemit attended the IB Mathematics using TI-Nspire cat. III workshop (fall 2013) \newline
+\itemit attended the IB Mathematics SL cat. I workshop (fall 2011) \newline
+\itemit Guldäpplet nominee (2010) \newline
 \itemit IT coordinator (2008-2009)  }
 
 \newpage
@@ -190,7 +194,7 @@ Physics A &  &  & \doneit &  &  & \\
  & \textbf{06-07} & \textbf{07-08}\\
 \hline
 Year 7 Mathematics & \doneit & \doneit\\
-Year 8 Mathematics & & \doneit 
+Year 8 Mathematics & & \doneit
 \end{tabular}
 }
 
@@ -215,7 +219,7 @@ Year 8 Mathematics & & \doneit
 \NewEntry{May 2005}{M.A. Education, Lindenwood University}
 %\NewEntry{2004-2005}{M.A. Education, Lindenwood University}
 
-\Description{\MarginText{\vfill \includegraphics[width=0.2\textwidth]{LindenwoodUniversityLogoBW}}GPA: 4.0/4.0 \newline 
+\Description{\MarginText{\vfill \includegraphics[width=0.2\textwidth]{LindenwoodUniversityLogoBW}}GPA: 4.0/4.0 \newline
 \textit{Course-based Master's degree}\newline
 \itemit resident director Guffey Hall\newline
 }
@@ -225,7 +229,7 @@ Year 8 Mathematics & & \doneit
 \NewEntry{May 2004}{B.A., Lindenwood University}
 %\NewEntry{2001-2004}{B.A., Lindenwood University}
 
-\Description{\MarginText{}GPA: 3.75/4.0 \newline 
+\Description{\MarginText{}GPA: 3.75/4.0 \newline
 Major: \textit{Mathematics}\newline
 \itemit successfully completed teacher education program \newline
 \itemit CBASE (\textsc{passed}) \& PRAXIS II Mathematics Content Knowledge (\textsc{passed}) \newline
@@ -245,7 +249,12 @@ Major: \textit{Mathematics}\newline
 
 \Description{\MarginText{Calculators}\textsc{TI-$n$spire CX/CAS}, \textsc{TI-89} \& \textsc{TI-84}}
 
-\Description{\MarginText{Software}\textsc{SageMath}, \textsc{Geogebra},  \textsc{FileMaker Pro}, \textsc{SchoolSoft}, \textsc{Managebac}, \textsc{Microsoft Office}, \textsc{GoogleDocs} \& \textsc{TextMate}}
+\Description{\MarginText{Software}\textsc{SageMath},
+\textsc{SchoolSoft},
+\textsc{Managebac},
+\& \textsc{Skola24},
+\textsc{Microsoft Office},
+\textsc{GoogleDocs} \& \textsc{TextMate}}
 
 \Description{\MarginText{Languages}\textsc{\LaTeX\,},\textsc{\TikZ} \& \textsc{Markdown/HTML5/CSS3}}
 
